@@ -2,6 +2,11 @@
 
 AT_SETUP([calculation of incorrect unidiffs])
 
+MIMENCODE=`which mimencode 2>/dev/null`
+if test -z "$MIMENCODE" ; then
+  exit 77
+fi
+
 MONOTONE_SETUP
 
 AT_DATA(firstfile.b64, [Ly8gY29weXJpZ2h0IChDKSAyMDAyLCAyMDAzIGdyYXlkb24gaG9hcmUgPGdyYXlkb25AcG9i
